--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     
 <head>
-    <title> Page 3 </title>
+    <title> Page 2 </title>
     <link rel="stylesheet" href="style.css">
 </head>   
-<body style="background-color:blue">
+<body style="background-color:red">
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
