--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <br>
     <br>
     <div class="try">
-     <p1><a href="https://saio01.github.io/ticket/" class="btn">Next po</a> </p1>
+     <p1><a href="https://deligos.github.io/Page-3/" class="btn">Next po</a> </p1>
 </div>
     
     
