--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <br>
     <br>
     <div class="try">
-    <p1><a href="https://deligos.github.io/2ND-SEM-ACT1-PAGE-3/" class="btn">Next po</a> </p1>
+    <p1><a href="https://deligos.github.io/2ND-SEM-ACT1-PAGE-3/" class="btn">Next Page</a> </p1>
     </div>
     </div>
     
